@@ -2,7 +2,7 @@
 -author  = Michael Jemmeson <mjemmeson@cpan.org>
 -license = Perl_5
 -copyright_holder = Michael Jemmeson
--copyright_year   = 2015
+-copyright_year   = 2016
 
 [@Milla]
 -remove = LicenseFromModule
