@@ -2,7 +2,10 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
-0.007  2016-01-29 13:44:18 GMT
+ [Bugfix]
+ - export methods from sub-region classes (EAW, NIR, SCT) - [Peter Newman]
+
+thanks.007  2016-01-29 13:44:18 GMT
 
  [Update]
  - 2017 dates added
